  sockets) (bug #35097)
* irc: reallow names beginning with "#" for servers
* lua: support of lua 5.2
* lua: fix crash when unloading a script without pointer to interpreter
* python: fix detection of python (first try "python2.x" and then "python")
  (bug #36835)
* python: fix crash when unloading a script without pointer to interpreter
* relay: fix freeze when writing on relay socket (use non-blocking sockets in
  relay for irc and weechat protocols) (bug #36655)
* ruby: detect ruby version 1.9.3 in cmake and autotools
* scripts: ignore call to "register" (with a warning) if script is already
  registered

Version 0.3.8 (2012-06-03)
--------------------------

* core: support lines of 16 Kb long in configuration files (instead of 1 Kb)
* core: fix crash in focus hook for nicklist (bug #36271)
* core: fix truncated configuration files (zero-length) after system crash
  (bug #36383)
* core: fix display bugs and crashs with small windows (bug #36107)
* core: convert options weechat.look.prefix_align_more and
  weechat.look.prefix_buffer_align_more from boolean to string (task #11197)
* core: fix display bug with prefix when length is greater than max and prefix
  is ending with a wide char (bug #36032)
* core: add option weechat.look.prefix_same_nick (hide or change prefix on
  messages whose nick is the same as previous message) (task #11965)
* core: convert tabs to spaces in text pasted (bug #25028)
* core: add a connection timeout for child process in hook_connect (bug #35966)
* core: follow symbolic links when writing configuration files (.conf)
  (task #11779)
* core: fix lost scroll when switching to a buffer with a pending search
* core: add support of terminal "bracketed paste mode", new options
  weechat.look.paste_bracketed and weechat.look.paste_bracketed_timer_delay
  (task #11316)
* core: fix display of wide chars on last column of chat area (patch #7733)
* doc: add japanese FAQ (patch #7781)