@@ -519,6 +519,7 @@ available:
 | hda  | Hdata content        | Variable
 | inf  | Info: name + content | Variable
 | inl  | Infolist content     | Variable
+| arr  | Array of values      | 3 bytes (type) + number of items + data
 |=====================================================
 
 [[object_char]]
@@ -829,6 +830,42 @@ infolist buffer
 └────────┴───╨────┴─────────┴─────┴─────────┴─────╨────┴─────────┴─────┴─────────┴─────┘
  └──────┘ └─┘ └──────────────────────────────────┘ └──────────────────────────────────┘
    name  count              item 1                               item 2
+.......................................
+
+[[object_array]]
+Array
+^^^^^
+
+An array is a type (3 bytes) + number of items (integer on 4 bytes) + data.
+
+Example of array with 2 strings:
+
+.......................................
+┌─────╥────┬────┬────┬────╥────┬────┬────┬────╥────┬────┬────╥────┬────┬────┬────╥────┬────┐
+│ str ║ 00 │ 00 │ 00 │ 02 ║ 00 │ 00 │ 00 │ 03 ║ 61 │ 62 │ 63 ║ 00 │ 00 │ 00 │ 02 ║ 64 │ 65 │ ────► { "abc", "de" }
+└─────╨────┴────┴────┴────╨────┴────┴────┴────╨────┴────┴────╨────┴────┴────┴────╨────┴────┘
+ └───┘ └─────────────────┘ └─────────────────┘ └────────────┘ └─────────────────┘ └───────┘
+ type   number of strings        length         'a'  'b'  'c'       length         'd'  'e'
+.......................................
+
+Example of array with 3 integers:
+
+.......................................
+┌─────╥────┬────┬────┬────╥────┬────┬────┬────╥────┬────┬────┬────╥────┬────┬────┬────┐
+│ int ║ 00 │ 00 │ 00 │ 03 ║ 00 │ 00 │ 00 │ 7B ║ 00 │ 00 │ 01 │ C8 ║ 00 │ 00 │ 03 │ 15 │ ────► { 123, 456, 789 }
+└─────╨────┴────┴────┴────╨────┴────┴────┴────╨────┴────┴────┴────╨────┴────┴────┴────┘
+ └───┘ └─────────────────┘ └─────────────────┘ └─────────────────┘ └─────────────────┘
+ type   number of integers      123 (0x7B)         456 (0x1C8)         789 (0x315)
+.......................................
+
+A 'NULL' array:
+
+.......................................
+┌─────╥────┬────┬────┬────┐
+│ str ║ 00 │ 00 │ 00 │ 00 │ ────► NULL
+└─────╨────┴────┴────┴────┘
+ └───┘ └─────────────────┘
+ type   number of strings
 .......................................
 
 [[typical_session]]
